Leaderboard fixed alignment

--- a/Front-end/become-billionaire/src/app/leaderboard/leaderboard.component.css
+++ b/Front-end/become-billionaire/src/app/leaderboard/leaderboard.component.css
@@ -43,18 +43,21 @@ div.box {
     font-family: "Roboto";
     
     text-align: left;
-    height: 15vw;
+    height: 12vw;
     color: white;
     margin-left: 10%;
     margin-right: 10%;
     margin-top:2%;
     padding-top: 1%;
-    padding-left: 5%;
+    padding-left: 9%;
     
     
   }
   .profileIcon {
       margin-left: 40%;
+      margin-top: 5%;
+      font-size: 8vw;
+      font-size: max(40px);
       height: auto;
       width: auto;
   }
@@ -69,6 +72,7 @@ div.box {
     padding-bottom: 2vw;
     color: white;
     font-size: 3vw; 
+    font-size: max(60px);
   }
 
   ::ng-deep .mat-progress-bar-fill::after {
@@ -89,10 +93,17 @@ div.box {
     margin-bottom: 2vw;
 
 }
+.progressBarTop {
+  width: 16vw;
+  margin-top: 3%;
+  margin-bottom: 1vw;
+
+}
 
 .divLeft {
   
   width:6vw;
+  height: auto;
   display:block;
   float: left;
   text-align: right;
@@ -101,6 +112,7 @@ div.box {
 }
 .divRight {
   width:10vw;
+  height: auto;
   display:block;
   float: right;
   text-align: left;
@@ -119,17 +131,26 @@ div.box {
     border-radius: 0.4vw;
     float: right;
     text-align: left;
-    height: 8vw;
+    height: 7vw;
     width: 95%;
     color: white;
-   
     margin-right: 8%;
-    
-    padding-top: 6%;
+    padding-top: 2%;
     padding-left: 2vw;
+    margin-bottom: 2%;
     
 }
 .nameSize {
   font-size: 1.5vw;
+  font-size: max(30px);
 }
 
+.nameSizeTop {
+  font-size: 1.5vw;
+  font-size: max(25px);
+}
+
+.topPoints {
+  font-size: 1.5vw;
+  font-size: max(20px);
+}
